--- a/evals/evals.ipynb
+++ b/evals/evals.ipynb
@@ -4,9 +4,10 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Eval run plots\n",
+        "# Eval Run Plots\n",
         "\n",
-        "Plots validation curves for each run listed in `run_details.json`."
+        "Plots loss, AUC, and accuracy curves for each run listed in `run_details.json`.\n",
+        "Best values are highlighted with markers."
       ]
     },
     {
@@ -17,12 +18,14 @@
       "source": [
         "import json\n",
         "from pathlib import Path\n",
+        "from typing import Any, Dict, List, Optional\n",
         "\n",
         "import matplotlib.pyplot as plt\n",
         "import pandas as pd\n",
         "\n",
         "\n",
         "def resolve_path(path_str: str) -> Path:\n",
+        "    \"\"\"Resolve path from multiple candidate locations.\"\"\"\n",
         "    path = Path(path_str)\n",
         "    candidates = [\n",
         "        path,\n",
@@ -36,6 +39,70 @@
         "    return path\n",
         "\n",
         "\n",
+        "def generate_run_name(run: Dict[str, Any]) -> str:\n",
+        "    \"\"\"Generate a unique/differentiator name from run parameters or run_id.\"\"\"\n",
+        "    params = run.get('params')\n",
+        "    run_id = run.get('run_id', 'unknown')\n",
+        "    \n",
+        "    # Extract timestamp from run_id (e.g., temporal-vit-20260106-044352 -> 01/06-0443)\n",
+        "    parts = run_id.split('-')\n",
+        "    if len(parts) >= 4:\n",
+        "        date_part = parts[-2]  # e.g., 20260106\n",
+        "        time_part = parts[-1]  # e.g., 044352\n",
+        "        short_ts = f\"{date_part[4:6]}/{date_part[6:8]}-{time_part[:4]}\"\n",
+        "    else:\n",
+        "        short_ts = run_id[-12:] if len(run_id) > 12 else run_id\n",
+        "    \n",
+        "    if params and isinstance(params, dict):\n",
+        "        # Build name from key parameters\n",
+        "        name_parts = []\n",
+        "        \n",
+        "        # Key differentiating parameters\n",
+        "        param_abbrevs = {\n",
+        "            'n_trials': 'tr',\n",
+        "            'embed_dim': 'dim',\n",
+        "            'n_layers': 'L',\n",
+        "            'n_heads': 'H',\n",
+        "            'dropout': 'do',\n",
+        "            'drop_path': 'dp',\n",
+        "            'lr': 'lr',\n",
+        "            'weight_decay': 'wd',\n",
+        "            'label_smoothing': 'ls',\n",
+        "            'batch_size': 'bs',\n",
+        "        }\n",
+        "        \n",
+        "        for key, abbrev in param_abbrevs.items():\n",
+        "            if key in params:\n",
+        "                val = params[key]\n",
+        "                if isinstance(val, float):\n",
+        "                    if val < 0.01:\n",
+        "                        val_str = f\"{val:.0e}\"\n",
+        "                    else:\n",
+        "                        val_str = f\"{val:.2g}\"\n",
+        "                else:\n",
+        "                    val_str = str(val)\n",
+        "                name_parts.append(f\"{abbrev}{val_str}\")\n",
+        "        \n",
+        "        if name_parts:\n",
+        "            return f\"{short_ts} ({', '.join(name_parts[:4])})\"\n",
+        "    \n",
+        "    return short_ts\n",
+        "\n",
+        "\n",
+        "def extract_metrics_df(run: Dict[str, Any]) -> pd.DataFrame:\n",
+        "    \"\"\"Extract metrics from run into a DataFrame.\"\"\"\n",
+        "    metrics = run.get('metrics', [])\n",
+        "    if not metrics:\n",
+        "        return pd.DataFrame()\n",
+        "    \n",
+        "    df = pd.DataFrame(metrics)\n",
+        "    # Filter to training epochs only (exclude test-only rows)\n",
+        "    if 'val/loss' in df.columns:\n",
+        "        df = df.dropna(subset=['val/loss'])\n",
+        "    return df\n",
+        "\n",
+        "\n",
+        "# Load run details\n",
         "run_details_path = resolve_path('evals/run_details.json')\n",
         "if not run_details_path.exists():\n",
         "    run_details_path = resolve_path('run_details.json')\n",
@@ -47,33 +114,180 @@
         "if not runs:\n",
         "    raise ValueError('No runs found in run_details.json')\n",
         "\n",
-        "fig, axes = plt.subplots(1, 2, figsize=(12, 4))\n",
-        "\n",
+        "print(f\"Found {len(runs)} runs\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Prepare data for each run\n",
+        "run_data = []\n",
         "for run in runs:\n",
-        "    csv_path = resolve_path(run['csv'])\n",
-        "    df = pd.read_csv(csv_path)\n",
-        "    df['epoch_num'] = pd.to_numeric(df['epoch'], errors='coerce')\n",
-        "    df_train = df.dropna(subset=['epoch_num']).copy()\n",
-        "    df_train['epoch_num'] = df_train['epoch_num'].astype(int)\n",
+        "    df = extract_metrics_df(run)\n",
+        "    if df.empty:\n",
+        "        continue\n",
+        "    \n",
+        "    name = generate_run_name(run)\n",
+        "    run_data.append({\n",
+        "        'name': name,\n",
+        "        'run_id': run.get('run_id'),\n",
+        "        'df': df,\n",
+        "        'summary': run.get('summary', {}),\n",
+        "    })\n",
         "\n",
-        "    label = run.get('run_id') or Path(run['csv']).stem\n",
-        "    if 'val_auc' in df_train:\n",
-        "        axes[0].plot(df_train['epoch_num'], df_train['val_auc'], label=label)\n",
-        "    if 'val_loss' in df_train:\n",
-        "        axes[1].plot(df_train['epoch_num'], df_train['val_loss'], label=label)\n",
+        "print(f\"Runs with metrics: {len(run_data)}\")\n",
+        "for rd in run_data:\n",
+        "    print(f\"  - {rd['name']}: {len(rd['df'])} epochs\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Plot 1: Loss over epochs\n",
+        "fig, ax = plt.subplots(figsize=(10, 6))\n",
         "\n",
-        "axes[0].set_title('Validation AUC')\n",
-        "axes[0].set_xlabel('Epoch')\n",
-        "axes[0].set_ylabel('AUC')\n",
-        "axes[0].grid(True, alpha=0.3)\n",
+        "for rd in run_data:\n",
+        "    df = rd['df']\n",
+        "    name = rd['name']\n",
+        "    \n",
+        "    if 'val/loss' not in df.columns or 'step' not in df.columns:\n",
+        "        continue\n",
+        "    \n",
+        "    epochs = df['step'].values\n",
+        "    val_loss = df['val/loss'].values\n",
+        "    \n",
+        "    # Plot the line\n",
+        "    line, = ax.plot(epochs, val_loss, marker='o', markersize=4, label=name)\n",
+        "    \n",
+        "    # Highlight best (minimum) loss\n",
+        "    best_idx = val_loss.argmin()\n",
+        "    best_epoch = epochs[best_idx]\n",
+        "    best_val = val_loss[best_idx]\n",
+        "    ax.scatter([best_epoch], [best_val], s=150, c=line.get_color(), \n",
+        "               marker='*', edgecolors='black', linewidths=1, zorder=5)\n",
+        "    ax.annotate(f'{best_val:.3f}', (best_epoch, best_val), \n",
+        "                textcoords='offset points', xytext=(5, 5), fontsize=8)\n",
         "\n",
-        "axes[1].set_title('Validation Loss')\n",
-        "axes[1].set_xlabel('Epoch')\n",
-        "axes[1].set_ylabel('Loss')\n",
-        "axes[1].grid(True, alpha=0.3)\n",
+        "ax.set_title('Validation Loss over Epochs', fontsize=14, fontweight='bold')\n",
+        "ax.set_xlabel('Epoch', fontsize=12)\n",
+        "ax.set_ylabel('Loss', fontsize=12)\n",
+        "ax.grid(True, alpha=0.3)\n",
+        "ax.legend(loc='best', fontsize=10)\n",
+        "plt.tight_layout()\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Plot 2: AUC over epochs\n",
+        "fig, ax = plt.subplots(figsize=(10, 6))\n",
         "\n",
-        "axes[0].legend(loc='best')\n",
-        "plt.tight_layout()\n"
+        "for rd in run_data:\n",
+        "    df = rd['df']\n",
+        "    name = rd['name']\n",
+        "    \n",
+        "    if 'val/auc' not in df.columns or 'step' not in df.columns:\n",
+        "        continue\n",
+        "    \n",
+        "    epochs = df['step'].values\n",
+        "    val_auc = df['val/auc'].values\n",
+        "    \n",
+        "    # Plot the line\n",
+        "    line, = ax.plot(epochs, val_auc, marker='o', markersize=4, label=name)\n",
+        "    \n",
+        "    # Highlight best (maximum) AUC\n",
+        "    best_idx = val_auc.argmax()\n",
+        "    best_epoch = epochs[best_idx]\n",
+        "    best_val = val_auc[best_idx]\n",
+        "    ax.scatter([best_epoch], [best_val], s=150, c=line.get_color(), \n",
+        "               marker='*', edgecolors='black', linewidths=1, zorder=5)\n",
+        "    ax.annotate(f'{best_val:.4f}', (best_epoch, best_val), \n",
+        "                textcoords='offset points', xytext=(5, -10), fontsize=8)\n",
+        "\n",
+        "ax.set_title('Validation AUC over Epochs', fontsize=14, fontweight='bold')\n",
+        "ax.set_xlabel('Epoch', fontsize=12)\n",
+        "ax.set_ylabel('AUC', fontsize=12)\n",
+        "ax.grid(True, alpha=0.3)\n",
+        "ax.legend(loc='best', fontsize=10)\n",
+        "plt.tight_layout()\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Plot 3: Accuracy over epochs\n",
+        "fig, ax = plt.subplots(figsize=(10, 6))\n",
+        "\n",
+        "for rd in run_data:\n",
+        "    df = rd['df']\n",
+        "    name = rd['name']\n",
+        "    \n",
+        "    if 'val/acc' not in df.columns or 'step' not in df.columns:\n",
+        "        continue\n",
+        "    \n",
+        "    epochs = df['step'].values\n",
+        "    val_acc = df['val/acc'].values\n",
+        "    \n",
+        "    # Plot the line\n",
+        "    line, = ax.plot(epochs, val_acc, marker='o', markersize=4, label=name)\n",
+        "    \n",
+        "    # Highlight best (maximum) accuracy\n",
+        "    best_idx = val_acc.argmax()\n",
+        "    best_epoch = epochs[best_idx]\n",
+        "    best_val = val_acc[best_idx]\n",
+        "    ax.scatter([best_epoch], [best_val], s=150, c=line.get_color(), \n",
+        "               marker='*', edgecolors='black', linewidths=1, zorder=5)\n",
+        "    ax.annotate(f'{best_val:.3f}', (best_epoch, best_val), \n",
+        "                textcoords='offset points', xytext=(5, -10), fontsize=8)\n",
+        "\n",
+        "ax.set_title('Validation Accuracy over Epochs', fontsize=14, fontweight='bold')\n",
+        "ax.set_xlabel('Epoch', fontsize=12)\n",
+        "ax.set_ylabel('Accuracy', fontsize=12)\n",
+        "ax.grid(True, alpha=0.3)\n",
+        "ax.legend(loc='best', fontsize=10)\n",
+        "plt.tight_layout()\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Summary table\n",
+        "summary_data = []\n",
+        "for rd in run_data:\n",
+        "    df = rd['df']\n",
+        "    summary = rd['summary']\n",
+        "    \n",
+        "    row = {\n",
+        "        'Run': rd['name'],\n",
+        "        'Epochs': len(df),\n",
+        "        'Best Val AUC': summary.get('best_val_auc'),\n",
+        "        'Best AUC Epoch': summary.get('best_val_auc_step'),\n",
+        "        'Test AUC': summary.get('last_test_auc'),\n",
+        "        'Test Acc': summary.get('last_test_acc'),\n",
+        "    }\n",
+        "    summary_data.append(row)\n",
+        "\n",
+        "summary_df = pd.DataFrame(summary_data)\n",
+        "summary_df = summary_df.sort_values('Best Val AUC', ascending=False)\n",
+        "display(summary_df)"
       ]
     }
   ],
