--- a/evals/evals.ipynb
+++ b/evals/evals.ipynb
@@ -7,7 +7,7 @@
         "# Eval Run Plots\n",
         "\n",
         "Plots loss, AUC, and accuracy curves for each run listed in `run_details.json`.\n",
-        "Best values are highlighted with markers."
+        "Best values are highlighted with markers. Baseline results are loaded from `baseline_results.json`."
       ]
     },
     {
@@ -102,6 +102,18 @@
         "    return df\n",
         "\n",
         "\n",
+        "def load_baselines(path_str: str = 'evals/baseline_results.json') -> List[Dict[str, Any]]:\n",
+        "    \"\"\"Load baseline results from JSON file.\"\"\"\n",
+        "    path = resolve_path(path_str)\n",
+        "    if not path.exists():\n",
+        "        print(f\"Baseline results not found at {path}. Run collect_baseline_results.py first.\")\n",
+        "        return []\n",
+        "    \n",
+        "    with open(path, 'r', encoding='utf-8') as handle:\n",
+        "        payload = json.load(handle)\n",
+        "    return payload.get('baselines', [])\n",
+        "\n",
+        "\n",
         "# Load run details\n",
         "run_details_path = resolve_path('evals/run_details.json')\n",
         "if not run_details_path.exists():\n",
@@ -114,7 +126,10 @@
         "if not runs:\n",
         "    raise ValueError('No runs found in run_details.json')\n",
         "\n",
-        "print(f\"Found {len(runs)} runs\")"
+        "baselines = load_baselines()\n",
+        "\n",
+        "print(f\"Found {len(runs)} runs\")\n",
+        "print(f\"Found {len(baselines)} baseline results\")\n"
       ]
     },
     {
@@ -140,7 +155,15 @@
         "\n",
         "print(f\"Runs with metrics: {len(run_data)}\")\n",
         "for rd in run_data:\n",
-        "    print(f\"  - {rd['name']}: {len(rd['df'])} epochs\")"
+        "    print(f\"  - {rd['name']}: {len(rd['df'])} epochs\")\n",
+        "\n",
+        "print('\\nBaselines:')\n",
+        "for bl in baselines:\n",
+        "    test_auc = bl.get('test', {}).get('auc')\n",
+        "    test_acc = bl.get('test', {}).get('acc')\n",
+        "    auc_str = f\"{test_auc:.4f}\" if isinstance(test_auc, float) else 'N/A'\n",
+        "    acc_str = f\"{test_acc:.4f}\" if isinstance(test_acc, float) else 'N/A'\n",
+        "    print(f\"  - {bl['name']}: test_auc={auc_str}, test_acc={acc_str}\")\n"
       ]
     },
     {
@@ -150,7 +173,7 @@
       "outputs": [],
       "source": [
         "# Plot 1: Loss over epochs\n",
-        "fig, ax = plt.subplots(figsize=(10, 6))\n",
+        "fig, ax = plt.subplots(figsize=(9, 5))\n",
         "\n",
         "for rd in run_data:\n",
         "    df = rd['df']\n",
@@ -180,7 +203,7 @@
         "ax.grid(True, alpha=0.3)\n",
         "ax.legend(loc='best', fontsize=10)\n",
         "plt.tight_layout()\n",
-        "plt.show()"
+        "plt.show()\n"
       ]
     },
     {
@@ -189,8 +212,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Plot 2: AUC over epochs\n",
-        "fig, ax = plt.subplots(figsize=(10, 6))\n",
+        "# Plot 2: Validation AUC over epochs\n",
+        "fig, ax = plt.subplots(figsize=(9, 5))\n",
         "\n",
         "for rd in run_data:\n",
         "    df = rd['df']\n",
@@ -220,7 +243,7 @@
         "ax.grid(True, alpha=0.3)\n",
         "ax.legend(loc='best', fontsize=10)\n",
         "plt.tight_layout()\n",
-        "plt.show()"
+        "plt.show()\n"
       ]
     },
     {
@@ -229,8 +252,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Plot 3: Accuracy over epochs\n",
-        "fig, ax = plt.subplots(figsize=(10, 6))\n",
+        "# Plot 3: Validation Accuracy over epochs\n",
+        "fig, ax = plt.subplots(figsize=(9, 5))\n",
         "\n",
         "for rd in run_data:\n",
         "    df = rd['df']\n",
@@ -260,7 +283,7 @@
         "ax.grid(True, alpha=0.3)\n",
         "ax.legend(loc='best', fontsize=10)\n",
         "plt.tight_layout()\n",
-        "plt.show()"
+        "plt.show()\n"
       ]
     },
     {
@@ -269,13 +292,143 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Summary table\n",
+        "# Plot 4: Test AUC comparison (ViT vs baselines)\n",
+        "fig, ax = plt.subplots(figsize=(12, 6))\n",
+        "\n",
+        "model_names = []\n",
+        "test_aucs = []\n",
+        "colors = []\n",
+        "\n",
+        "for rd in run_data:\n",
+        "    test_auc = rd['summary'].get('last_test_auc')\n",
+        "    if isinstance(test_auc, float):\n",
+        "        model_names.append(f\"ViT: {rd['name']}\")\n",
+        "        test_aucs.append(test_auc)\n",
+        "        colors.append('steelblue')\n",
+        "\n",
+        "baseline_color_map = {\n",
+        "    'log_reg': 'coral',\n",
+        "    'logistic_regression': 'coral',\n",
+        "    'xgboost': 'forestgreen',\n",
+        "    'random_forest': 'purple',\n",
+        "}\n",
+        "for bl in baselines:\n",
+        "    test_auc = bl.get('test', {}).get('auc')\n",
+        "    if isinstance(test_auc, float):\n",
+        "        model_names.append(bl['name'])\n",
+        "        test_aucs.append(test_auc)\n",
+        "        colors.append(baseline_color_map.get(bl.get('model_type', ''), 'gray'))\n",
+        "\n",
+        "if not test_aucs:\n",
+        "    print('No test AUC values available to plot.')\n",
+        "else:\n",
+        "    sorted_indices = sorted(range(len(test_aucs)), key=lambda i: test_aucs[i], reverse=True)\n",
+        "    model_names = [model_names[i] for i in sorted_indices]\n",
+        "    test_aucs = [test_aucs[i] for i in sorted_indices]\n",
+        "    colors = [colors[i] for i in sorted_indices]\n",
+        "\n",
+        "    bars = ax.barh(range(len(model_names)), test_aucs, color=colors, edgecolor='black', linewidth=0.5)\n",
+        "    for bar, auc in zip(bars, test_aucs):\n",
+        "        ax.text(auc + 0.005, bar.get_y() + bar.get_height() / 2, f'{auc:.4f}',\n",
+        "                va='center', ha='left', fontsize=9)\n",
+        "\n",
+        "    ax.set_yticks(range(len(model_names)))\n",
+        "    ax.set_yticklabels(model_names, fontsize=10)\n",
+        "    ax.set_xlabel('Test AUC', fontsize=12)\n",
+        "    ax.set_title('Test AUC Comparison: ViT vs Baselines', fontsize=14, fontweight='bold')\n",
+        "    ax.set_xlim(0, max(test_aucs) * 1.1)\n",
+        "    ax.grid(True, alpha=0.3, axis='x')\n",
+        "\n",
+        "    from matplotlib.patches import Patch\n",
+        "    legend_elements = [\n",
+        "        Patch(facecolor='steelblue', edgecolor='black', label='ViT'),\n",
+        "        Patch(facecolor='coral', edgecolor='black', label='Logistic Regression'),\n",
+        "    ]\n",
+        "    ax.legend(handles=legend_elements, loc='lower right', fontsize=10)\n",
+        "\n",
+        "    plt.tight_layout()\n",
+        "    plt.show()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Plot 5: Test Accuracy comparison (ViT vs baselines)\n",
+        "fig, ax = plt.subplots(figsize=(12, 6))\n",
+        "\n",
+        "model_names = []\n",
+        "test_accs = []\n",
+        "colors = []\n",
+        "\n",
+        "for rd in run_data:\n",
+        "    test_acc = rd['summary'].get('last_test_acc')\n",
+        "    if isinstance(test_acc, float):\n",
+        "        model_names.append(f\"ViT: {rd['name']}\")\n",
+        "        test_accs.append(test_acc)\n",
+        "        colors.append('steelblue')\n",
+        "\n",
+        "baseline_color_map = {\n",
+        "    'log_reg': 'coral',\n",
+        "    'logistic_regression': 'coral',\n",
+        "    'xgboost': 'forestgreen',\n",
+        "    'random_forest': 'purple',\n",
+        "}\n",
+        "for bl in baselines:\n",
+        "    test_acc = bl.get('test', {}).get('acc')\n",
+        "    if isinstance(test_acc, float):\n",
+        "        model_names.append(bl['name'])\n",
+        "        test_accs.append(test_acc)\n",
+        "        colors.append(baseline_color_map.get(bl.get('model_type', ''), 'gray'))\n",
+        "\n",
+        "if not test_accs:\n",
+        "    print('No test accuracy values available to plot.')\n",
+        "else:\n",
+        "    sorted_indices = sorted(range(len(test_accs)), key=lambda i: test_accs[i], reverse=True)\n",
+        "    model_names = [model_names[i] for i in sorted_indices]\n",
+        "    test_accs = [test_accs[i] for i in sorted_indices]\n",
+        "    colors = [colors[i] for i in sorted_indices]\n",
+        "\n",
+        "    bars = ax.barh(range(len(model_names)), test_accs, color=colors, edgecolor='black', linewidth=0.5)\n",
+        "    for bar, acc in zip(bars, test_accs):\n",
+        "        ax.text(acc + 0.005, bar.get_y() + bar.get_height() / 2, f'{acc:.4f}',\n",
+        "                va='center', ha='left', fontsize=9)\n",
+        "\n",
+        "    ax.set_yticks(range(len(model_names)))\n",
+        "    ax.set_yticklabels(model_names, fontsize=10)\n",
+        "    ax.set_xlabel('Test Accuracy', fontsize=12)\n",
+        "    ax.set_title('Test Accuracy Comparison: ViT vs Baselines', fontsize=14, fontweight='bold')\n",
+        "    ax.set_xlim(0, max(test_accs) * 1.1)\n",
+        "    ax.grid(True, alpha=0.3, axis='x')\n",
+        "\n",
+        "    from matplotlib.patches import Patch\n",
+        "    legend_elements = [\n",
+        "        Patch(facecolor='steelblue', edgecolor='black', label='ViT'),\n",
+        "        Patch(facecolor='coral', edgecolor='black', label='Logistic Regression'),\n",
+        "    ]\n",
+        "    ax.legend(handles=legend_elements, loc='lower right', fontsize=10)\n",
+        "\n",
+        "    plt.tight_layout()\n",
+        "    plt.show()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Summary table with baselines\n",
         "summary_data = []\n",
+        "\n",
         "for rd in run_data:\n",
         "    df = rd['df']\n",
         "    summary = rd['summary']\n",
         "    \n",
         "    row = {\n",
+        "        'Model': 'ViT',\n",
         "        'Run': rd['name'],\n",
         "        'Epochs': len(df),\n",
         "        'Best Val AUC': summary.get('best_val_auc'),\n",
@@ -285,9 +438,23 @@
         "    }\n",
         "    summary_data.append(row)\n",
         "\n",
+        "for bl in baselines:\n",
+        "    row = {\n",
+        "        'Model': bl.get('model_type', 'baseline'),\n",
+        "        'Run': bl['name'],\n",
+        "        'Epochs': '-',\n",
+        "        'Best Val AUC': bl.get('val', {}).get('auc'),\n",
+        "        'Best AUC Epoch': '-',\n",
+        "        'Test AUC': bl.get('test', {}).get('auc'),\n",
+        "        'Test Acc': bl.get('test', {}).get('acc'),\n",
+        "    }\n",
+        "    summary_data.append(row)\n",
+        "\n",
         "summary_df = pd.DataFrame(summary_data)\n",
-        "summary_df = summary_df.sort_values('Best Val AUC', ascending=False)\n",
-        "display(summary_df)"
+        "summary_df['_sort_key'] = summary_df['Test AUC'].apply(lambda x: x if isinstance(x, float) else -1)\n",
+        "summary_df = summary_df.sort_values('_sort_key', ascending=False).drop(columns=['_sort_key'])\n",
+        "\n",
+        "display(summary_df)\n"
       ]
     }
   ],
