hptune evals plots

--- a/evals/evals.ipynb
+++ b/evals/evals.ipynb
@@ -537,9 +537,30 @@
     "                clip_on=False,\n",
     "            )\n",
     "\n",
-    "    labels = [short_run_id(row['run_id']) for row in hptune_data]\n",
-    "    val_aucs = [row.get('val_auc') for row in hptune_data]\n",
-    "    test_aucs = [row.get('test_auc') for row in hptune_data]\n",
+    "    rows = []\n",
+    "    for row in hptune_data:\n",
+    "        run_id = row.get('run_id')\n",
+    "        val = row.get('val_auc')\n",
+    "        test = row.get('test_auc')\n",
+    "        rows.append({\n",
+    "            'run_id': run_id or 'unknown',\n",
+    "            'val_auc': val,\n",
+    "            'test_auc': test,\n",
+    "        })\n",
+    "\n",
+    "    def sort_key(row):\n",
+    "        test = row.get('test_auc')\n",
+    "        if isinstance(test, (int, float)) and not math.isnan(test):\n",
+    "            return float(test)\n",
+    "        val = row.get('val_auc')\n",
+    "        if isinstance(val, (int, float)) and not math.isnan(val):\n",
+    "            return float(val)\n",
+    "        return float('-inf')\n",
+    "\n",
+    "    rows_sorted = sorted(rows, key=sort_key, reverse=True)\n",
+    "    labels = [short_run_id(r['run_id']) for r in rows_sorted]\n",
+    "    val_aucs = [r.get('val_auc') for r in rows_sorted]\n",
+    "    test_aucs = [r.get('test_auc') for r in rows_sorted]\n",
     "\n",
     "    x = np.arange(len(labels))\n",
     "    width = 0.38\n",
@@ -558,7 +579,7 @@
     "    ax.set_xticks(x)\n",
     "    ax.set_xticklabels(labels, rotation=45, ha='right', fontsize=8)\n",
     "    ax.set_ylabel('AUC')\n",
-    "    ax.set_title('HP Tuning Trials: Validation vs Test AUC')\n",
+    "    ax.set_title('HP Tuning Trials: Validation vs Test AUC (sorted by test)')\n",
     "    ax.grid(True, axis='y', alpha=0.3)\n",
     "    ax.legend()\n",
     "    plt.tight_layout()\n"
@@ -582,44 +603,61 @@
     "            return 'unknown'\n",
     "        return run_id[-8:] if len(run_id) > 8 else run_id\n",
     "\n",
-    "    labels = [short_run_id(row['run_id']) for row in hptune_data]\n",
-    "    val_aucs = [row.get('val_auc') for row in hptune_data]\n",
-    "    test_aucs = [row.get('test_auc') for row in hptune_data]\n",
-    "\n",
     "    rows = []\n",
-    "    for label, val, test in zip(labels, val_aucs, test_aucs):\n",
+    "    for row in hptune_data:\n",
+    "        run_id = row.get('run_id')\n",
+    "        val = row.get('val_auc')\n",
+    "        test = row.get('test_auc')\n",
     "        if not isinstance(val, (int, float)) or not isinstance(test, (int, float)):\n",
     "            continue\n",
     "        if math.isnan(val) or math.isnan(test):\n",
     "            continue\n",
-    "        rows.append((label, float(val), float(test)))\n",
+    "        rows.append({\n",
+    "            'run_id': run_id or 'unknown',\n",
+    "            'val_auc': float(val),\n",
+    "            'test_auc': float(test),\n",
+    "            'gap': float(val) - float(test),\n",
+    "        })\n",
     "\n",
     "    if not rows:\n",
     "        print('No valid HP runs with val/test AUC to plot.')\n",
     "    else:\n",
-    "        labels_f, val_f, test_f = zip(*rows)\n",
-    "        gaps = [v - t for v, t in zip(val_f, test_f)]\n",
+    "        # Generalization gap plot: lowest gap -> highest gap\n",
+    "        rows_gap = sorted(rows, key=lambda r: r['gap'])\n",
+    "        labels_gap = [short_run_id(r['run_id']) for r in rows_gap]\n",
+    "        gaps = [r['gap'] for r in rows_gap]\n",
     "\n",
-    "        x = np.arange(len(labels_f))\n",
-    "        fig, ax = plt.subplots(figsize=(max(10, len(labels_f) * 0.55), 5))\n",
+    "        x = np.arange(len(labels_gap))\n",
+    "        fig, ax = plt.subplots(figsize=(max(10, len(labels_gap) * 0.55), 5))\n",
     "        ax.bar(x, gaps, color='slategray')\n",
     "        ax.axhline(0, color='black', linewidth=0.8)\n",
     "        ax.set_xticks(x)\n",
-    "        ax.set_xticklabels(labels_f, rotation=45, ha='right', fontsize=8)\n",
+    "        ax.set_xticklabels(labels_gap, rotation=45, ha='right', fontsize=8)\n",
     "        ax.set_ylabel('Val AUC - Test AUC')\n",
-    "        ax.set_title('HP Tuning Trials: Generalization Gap')\n",
+    "        ax.set_title('HP Tuning Trials: Generalization Gap (low to high)')\n",
     "        ax.grid(True, axis='y', alpha=0.3)\n",
     "        plt.tight_layout()\n",
     "\n",
+    "        # Val vs Test scatter: order by highest val AUC to lowest\n",
+    "        rows_scatter = sorted(rows, key=lambda r: r['val_auc'], reverse=True)\n",
+    "        val_scatter = [r['val_auc'] for r in rows_scatter]\n",
+    "        test_scatter = [r['test_auc'] for r in rows_scatter]\n",
+    "        labels_scatter = [short_run_id(r['run_id']) for r in rows_scatter]\n",
+    "\n",
     "        fig, ax = plt.subplots(figsize=(6, 6))\n",
-    "        ax.scatter(val_f, test_f, color='teal', alpha=0.8)\n",
+    "        ax.scatter(val_scatter, test_scatter, color='teal', alpha=0.8)\n",
     "        ax.plot([0, 1], [0, 1], '--', color='gray')\n",
     "        ax.set_xlim(0, 1.0)\n",
     "        ax.set_ylim(0, 1.0)\n",
     "        ax.set_xlabel('Validation AUC')\n",
     "        ax.set_ylabel('Test AUC')\n",
-    "        ax.set_title('HP Tuning Trials: Val vs Test AUC')\n",
+    "        ax.set_title('HP Tuning Trials: Val vs Test AUC (sorted by val)')\n",
     "        ax.grid(True, alpha=0.3)\n",
+    "\n",
+    "        # Label points in sorted order for clarity\n",
+    "        for x_val, y_val, lbl in zip(val_scatter, test_scatter, labels_scatter):\n",
+    "            ax.text(x_val + 0.005, y_val, lbl, fontsize=7, alpha=0.75)\n",
+    "\n",
     "        plt.tight_layout()\n"
    ]
   },
