hptune run 2 setup

--- a/evals/evals.ipynb
+++ b/evals/evals.ipynb
@@ -878,6 +878,211 @@
      "            for hp in searched_hps:\n",
      "                print(f\"  {hp}: {best_run[hp]}\")\n"
     ]
+   },
+   {
+    "cell_type": "code",
+    "execution_count": null,
+    "id": "hp_comparison_runs",
+    "metadata": {},
+    "outputs": [],
+    "source": [
+     "# Plot: Hyperparameters vs Test AUC for Multiple HP Tuning Runs\n",
+     "import numpy as np\n",
+     "\n",
+     "def plot_hp_vs_testauc(hp_details_path: str, run_label: str):\n",
+     "    \"\"\"Plot hyperparameter vs test AUC scatter plots for a given HP tuning run.\"\"\"\n",
+     "    path = resolve_path(hp_details_path)\n",
+     "    if not path.exists():\n",
+     "        print(f'HP tuning details not found at {path}')\n",
+     "        return None\n",
+     "    \n",
+     "    with open(path, 'r', encoding='utf-8') as handle:\n",
+     "        hp_payload = json.load(handle)\n",
+     "    hp_runs = hp_payload.get('runs', [])\n",
+     "    \n",
+     "    # Extract hyperparameters and test AUC for each trial\n",
+     "    hp_data = []\n",
+     "    for run in hp_runs:\n",
+     "        summary = run.get('summary', {})\n",
+     "        params = run.get('params', {})\n",
+     "        test_auc = summary.get('last_test_auc')\n",
+     "        if test_auc is not None and isinstance(test_auc, (int, float)):\n",
+     "            hp_data.append({\n",
+     "                'run_id': run.get('run_id', 'unknown'),\n",
+     "                'test_auc': test_auc,\n",
+     "                **{k: v for k, v in params.items() if isinstance(v, (int, float))}\n",
+     "            })\n",
+     "    \n",
+     "    if not hp_data:\n",
+     "        print(f'No HP tuning runs with test AUC found in {run_label}.')\n",
+     "        return None\n",
+     "    \n",
+     "    hp_df = pd.DataFrame(hp_data)\n",
+     "    print(f'\\n{\"=\"*60}')\n",
+     "    print(f'{run_label}: Found {len(hp_df)} HP tuning trials with test AUC')\n",
+     "    print(f'{\"=\"*60}')\n",
+     "    \n",
+     "    # Identify hyperparameters that vary across trials\n",
+     "    searched_hps = []\n",
+     "    exclude_cols = {'run_id', 'test_auc', 'n_trials', 'epochs', 'warmup_epochs', \n",
+     "                    'early_stopping_patience', 'stride',\n",
+     "                    'train_sequences', 'val_sequences', 'test_sequences',\n",
+     "                    'n_heads', 'n_layers', 'embed_dim', 'min_lr',\n",
+     "                    'lr_base', 'lr_scale_factor'}  # exclude derived lr params\n",
+     "    \n",
+     "    for col in hp_df.columns:\n",
+     "        if col in exclude_cols:\n",
+     "            continue\n",
+     "        if hp_df[col].nunique() > 1:\n",
+     "            searched_hps.append(col)\n",
+     "    \n",
+     "    print(f'Searched hyperparameters: {searched_hps}')\n",
+     "    \n",
+     "    # Create subplots for each hyperparameter\n",
+     "    n_hps = len(searched_hps)\n",
+     "    if n_hps == 0:\n",
+     "        print('No varying hyperparameters found.')\n",
+     "        return hp_df\n",
+     "    \n",
+     "    n_cols = min(3, n_hps)\n",
+     "    n_rows = (n_hps + n_cols - 1) // n_cols\n",
+     "    \n",
+     "    fig, axes = plt.subplots(n_rows, n_cols, figsize=(5 * n_cols, 4 * n_rows))\n",
+     "    if n_hps == 1:\n",
+     "        axes = np.array([axes])\n",
+     "    axes = axes.flatten() if n_hps > 1 else [axes]\n",
+     "    \n",
+     "    # Color by test AUC\n",
+     "    test_aucs = hp_df['test_auc'].values\n",
+     "    best_idx = np.argmax(test_aucs)\n",
+     "    \n",
+     "    for i, hp_name in enumerate(searched_hps):\n",
+     "        ax = axes[i]\n",
+     "        x = hp_df[hp_name].values\n",
+     "        y = test_aucs\n",
+     "        \n",
+     "        # Scatter plot\n",
+     "        scatter = ax.scatter(x, y, c=y, cmap='viridis', s=80, edgecolors='black', linewidths=0.5, alpha=0.8)\n",
+     "        \n",
+     "        # Highlight best point\n",
+     "        ax.scatter([x[best_idx]], [y[best_idx]], s=200, c='red', marker='*', \n",
+     "                   edgecolors='black', linewidths=1, zorder=5, label='Best')\n",
+     "        \n",
+     "        # Add trend line\n",
+     "        if len(x) > 2:\n",
+     "            try:\n",
+     "                z = np.polyfit(x, y, 1)\n",
+     "                p = np.poly1d(z)\n",
+     "                x_line = np.linspace(x.min(), x.max(), 100)\n",
+     "                ax.plot(x_line, p(x_line), 'r--', alpha=0.5, linewidth=2)\n",
+     "                \n",
+     "                # Calculate correlation\n",
+     "                corr = np.corrcoef(x, y)[0, 1]\n",
+     "                ax.text(0.05, 0.95, f'r = {corr:.3f}', transform=ax.transAxes, \n",
+     "                        fontsize=10, verticalalignment='top',\n",
+     "                        bbox=dict(boxstyle='round', facecolor='white', alpha=0.8))\n",
+     "            except Exception:\n",
+     "                pass\n",
+     "        \n",
+     "        ax.set_xlabel(hp_name, fontsize=11)\n",
+     "        ax.set_ylabel('Test AUC', fontsize=11)\n",
+     "        ax.set_title(f'{hp_name} vs Test AUC', fontsize=12, fontweight='bold')\n",
+     "        ax.grid(True, alpha=0.3)\n",
+     "    \n",
+     "    # Hide unused axes\n",
+     "    for j in range(n_hps, len(axes)):\n",
+     "        axes[j].set_visible(False)\n",
+     "    \n",
+     "    plt.suptitle(f'{run_label}: Hyperparameter vs Test AUC', fontsize=14, fontweight='bold', y=1.02)\n",
+     "    plt.tight_layout()\n",
+     "    plt.show()\n",
+     "    \n",
+     "    # Print best configuration\n",
+     "    print(f'\\n--- {run_label} Best Configuration ---')\n",
+     "    best_run = hp_df.iloc[best_idx]\n",
+     "    print(f\"Run ID: {best_run['run_id']}\")\n",
+     "    print(f\"Test AUC: {best_run['test_auc']:.4f}\")\n",
+     "    print('Hyperparameters:')\n",
+     "    for hp in searched_hps:\n",
+     "        print(f\"  {hp}: {best_run[hp]}\")\n",
+     "    \n",
+     "    return hp_df\n",
+     "\n",
+     "\n",
+     "# Plot HP Run 1\n",
+     "hp_df_run1 = plot_hp_vs_testauc('evals/hptune_run_1_details.json', 'HP Tuning Run 1')\n",
+     "\n",
+     "# Plot HP Run 2\n",
+     "hp_df_run2 = plot_hp_vs_testauc('evals/hptune_run_2_details.json', 'HP Tuning Run 2')\n"
+    ]
+   },
+   {
+    "cell_type": "code",
+    "execution_count": null,
+    "id": "hp_comparison_summary",
+    "metadata": {},
+    "outputs": [],
+    "source": [
+     "# Summary comparison of HP Tuning Run 1 vs Run 2\n",
+     "\n",
+     "def summarize_hp_run(hp_df, run_label):\n",
+     "    \"\"\"Summarize statistics for an HP tuning run.\"\"\"\n",
+     "    if hp_df is None or hp_df.empty:\n",
+     "        return None\n",
+     "    \n",
+     "    return {\n",
+     "        'Run': run_label,\n",
+     "        'Trials': len(hp_df),\n",
+     "        'Best Test AUC': hp_df['test_auc'].max(),\n",
+     "        'Mean Test AUC': hp_df['test_auc'].mean(),\n",
+     "        'Std Test AUC': hp_df['test_auc'].std(),\n",
+     "        'Min Test AUC': hp_df['test_auc'].min(),\n",
+     "    }\n",
+     "\n",
+     "comparison_data = []\n",
+     "if hp_df_run1 is not None:\n",
+     "    comparison_data.append(summarize_hp_run(hp_df_run1, 'HP Run 1 (fixed bs=16)'))\n",
+     "if hp_df_run2 is not None:\n",
+     "    comparison_data.append(summarize_hp_run(hp_df_run2, 'HP Run 2 (bs=[8,16,32], LR scaling)'))\n",
+     "\n",
+     "if comparison_data:\n",
+     "    comparison_df = pd.DataFrame([d for d in comparison_data if d is not None])\n",
+     "    print('\\n' + '='*60)\n",
+     "    print('HP Tuning Runs Comparison')\n",
+     "    print('='*60)\n",
+     "    display(comparison_df)\n",
+     "    \n",
+     "    # Bar chart comparison\n",
+     "    if len(comparison_df) > 1:\n",
+     "        fig, ax = plt.subplots(figsize=(10, 5))\n",
+     "        x = np.arange(len(comparison_df))\n",
+     "        width = 0.25\n",
+     "        \n",
+     "        bars1 = ax.bar(x - width, comparison_df['Best Test AUC'], width, label='Best', color='forestgreen')\n",
+     "        bars2 = ax.bar(x, comparison_df['Mean Test AUC'], width, label='Mean', color='steelblue')\n",
+     "        bars3 = ax.bar(x + width, comparison_df['Min Test AUC'], width, label='Min', color='coral')\n",
+     "        \n",
+     "        ax.set_ylabel('Test AUC')\n",
+     "        ax.set_title('HP Tuning Runs: Test AUC Comparison', fontweight='bold')\n",
+     "        ax.set_xticks(x)\n",
+     "        ax.set_xticklabels(comparison_df['Run'])\n",
+     "        ax.legend()\n",
+     "        ax.grid(True, alpha=0.3, axis='y')\n",
+     "        \n",
+     "        # Add value labels\n",
+     "        for bars in [bars1, bars2, bars3]:\n",
+     "            for bar in bars:\n",
+     "                height = bar.get_height()\n",
+     "                ax.annotate(f'{height:.3f}',\n",
+     "                            xy=(bar.get_x() + bar.get_width() / 2, height),\n",
+     "                            xytext=(0, 3), textcoords='offset points',\n",
+     "                            ha='center', va='bottom', fontsize=8)\n",
+     "        \n",
+     "        plt.tight_layout()\n",
+     "        plt.show()\n",
+     "else:\n",
+     "    print('No HP tuning data available for comparison.')\n"
+    ]
    }
   ],
   "metadata": {
